# academic

UCSD_Connect/app/: build.gradle  google-services.json
computer_graphics_openGL/OpenGL_notes/: OpenGL_basics
computer_graphics_openGL/curves/: hw-curves.sln
computer_graphics_openGL/mytests/: README.txt  geometry.h  mytest.sln  mytest1.cpp  mytest2.cpp  mytest3.cpp  shaders.cpp
computer_graphics_openGL/ray_tracer/: Makefile  README.txt  raytracer
data_structures/1_BST/: .cproject  .project  BST.hpp  BSTIterator.hpp  BSTNode.hpp  DevLog  README  main.cpp  test_BST.cpp
data_structures/2_Huffman_encoding/: .cproject  BitInputStream.cpp  BitInputStream.hpp  BitOutputStream.cpp  BitOutputStream.hpp  DevLog  HCNode.cpp  HCNode.hpp  HCTree.cpp  HCTree.hpp  Makefile  PA2.hpp  compress.cpp  debug.sh  test.sh  uncompress.cpp
data_structures/3_TST_Autocomplete/: .cproject  .project  DevLog  DictionaryBST.cpp  DictionaryBST.hpp  DictionaryHashtable.cpp  DictionaryHashtable.hpp  DictionaryTrie.cpp  DictionaryTrie.hpp  FinalReport.pdf.docx  Makefile  benchdict.cpp  debug.sh  output.tsv  output.tsv.gsheet  refout  studentout  test.cpp  test.sh  util.cpp
data_structures/4_graph_traversal/: .cproject  .project  ActorGraph.cpp  ActorGraph.hpp  ActorNode.cpp  Makefile  (+12 more)
math/: .gitignore  clean_up.sh
operating_systems/: template.tex
programming_languages/: .gitignore
programming_languages/pa2/Haskell/: LICENSE  README.md  stack.yaml  warmup-pa2.cabal
programming_languages/pa2/Haskell/lib/: Playground.hs  Warmup.hs
programming_languages/pa2/Haskell/tests/: Test.hs
(+405 files in other folders)
